- fixing error handling (yaml and Exceptions.kt) - added dao/dom mapper - refactored common code to Utilities.kt - implemented post reservation and get island calendar endpoints
